--- a/src/script/CMakeLists.txt
+++ b/src/script/CMakeLists.txt
@@ -14,6 +14,7 @@ set(common_SCRIPT_SRCS
 set(client_SCRIPT_SRCS
 	${CMAKE_CURRENT_SOURCE_DIR}/scripting_mainmenu.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/scripting_client.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/scripting_server_sent.cpp
 	${client_SCRIPT_COMMON_SRCS}
 	${client_SCRIPT_CPP_API_SRCS}
 	${client_SCRIPT_LUA_API_SRCS}
